# BookFlow

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat
docs/: architecture.md  commands.md  user-guide.md
include/: Application.h  Book.h  Category.h  FileManager.h  Fs.h  Library.h  Loan.h  Logger.h  Models.h  Optional.h  Reader.h  ReportGenerator.h  Reservation.h  SearchEngine.h  Settings.h  Utils.h
src/: Application.cpp  Book.cpp  FileManager.cpp  Library.cpp  Loan.cpp  Logger.cpp  Reader.cpp  ReportGenerator.cpp  SearchEngine.cpp  Utils.cpp
tests/: test_library.cpp
